--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "18.0.1400-alpha.4",
+  "version": "18.0.1400-beta.0",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   "dependencies": {
     "@angular-devkit/core": "~14.0.0",
     "@angular-devkit/schematics": "~14.0.0",
-    "@igniteui/angular-templates": "~18.0.1400-alpha.4",
-    "@igniteui/cli-core": "~14.0.0-alpha.4",
+    "@igniteui/angular-templates": "~18.0.1400-beta.0",
+    "@igniteui/cli-core": "~14.0.0-beta.0",
     "@schematics/angular": "~14.0.0",
     "rxjs": "^6.6.3"
   },
