Updating lint versions and adding lint configuration in angular.json file

--- a/packages/igx-templates/igx-ts/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/angular.json
@@ -106,8 +106,20 @@
 							]
 						}
 					}
+				},
+				"lint": {
+				  "builder": "@angular-eslint/builder:lint",
+				  "options": {
+					"lintFilePatterns": [
+					  "src/**/*.ts",
+					  "src/**/*.html"
+					]
+				  }
 				}
 			}
 		}
+	},
+	"cli": {
+	  "schematicCollections": ["@angular-eslint/schematics"]
 	}
 }
