--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -84,7 +84,7 @@
     "fs-extra": "^11.2.0",
     "glob": "^7.1.2",
     "inquirer": "^6.4.1",
-    "opn": "^5.3.0",
+    "open": "^10.1.0",
     "resolve": "^1.6.0",
     "through2": "^2.0.3",
     "typescript": "~5.4.3",
@@ -108,7 +108,7 @@
     "source-map-support": "^0.5.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript-json-schema": "^0.42.0"
+    "typescript-json-schema": "^0.65.1"
   },
   "ng-update": {
     "migrations": "./migrations/migration-collection.json"
