--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -80,6 +80,7 @@
   "dependencies": {
     "@igniteui/angular-templates": "~18.1.1400",
     "@igniteui/cli-core": "~14.0.0",
+    "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
@@ -88,7 +89,7 @@
     "resolve": "^1.22.8",
     "through2": "^4.0.2",
     "typescript": "~5.4.3",
-    "yargs": "^8.0.2"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@angular-devkit/core": "~14.0.0",
