--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"pretest": "npm run lint && npm run build",
 		"test": "nyc npm run jasmine",
 		"jasmine": "node spec/jasmine-runner.js",
-		"coverage": "nyc report --dir coverage lcov",
+		"coverage": "nyc report --report-dir",
 		"lint": "eslint -c .eslintrc.json ./**/*.ts",
 		"config-schema": "typescript-json-schema packages/core/types/Config.ts Config -o packages/core/config/Config.schema.json"
 	},
