chore(react): increase build ram

--- a/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && --max-old-space-size=4096 node_modules/vite/bin/vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest"
