--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
 		"handlebars": "4.7.8"
 	},
 	"devDependencies": {
-		"@types/inquirer": "0.0.35",
 		"@types/jasmine": "3.3.9",
 		"@types/minimatch": "^5.1.2",
 		"@types/node": "^20.12.3",
+		"@inquirer/prompts": "^5.4.0",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
 		"browser-sync": "^3.0.2",
@@ -73,7 +73,6 @@
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-unicorn": "^52.0.0",
 		"glob": "^11.0.0",
-		"inquirer": "^6.4.1",
 		"jasmine": "3.5.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"lerna": "^3.16.4",
