--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -83,7 +83,7 @@
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
     "glob": "^11.0.0",
-    "inquirer": "^6.4.1",
+	"@inquirer/prompts": "^5.4.0",
     "open": "^10.1.0",
     "resolve": "^1.22.8",
     "through2": "^4.0.2",
@@ -94,7 +94,6 @@
     "@angular-devkit/core": "~14.0.0",
     "@angular-devkit/schematics": "~14.0.0",
     "@schematics/angular": "~14.0.0",
-    "@types/inquirer": "0.0.35",
     "@types/jasmine": "~3.5.0",
     "@types/node": "^20.12.3",
     "browser-sync": "^3.0.2",
