--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
 	},
 	"devDependencies": {
 		"@types/inquirer": "0.0.35",
-		"@types/jasmine": "3.3.9",
+		"@types/jasmine": "^5.1.4",
 		"@types/minimatch": "^5.1.2",
-		"@types/node": "^20.12.3",
+		"@types/node": "^22.5.4",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
 		"browser-sync": "^3.0.2",
@@ -74,7 +74,7 @@
 		"eslint-plugin-unicorn": "^52.0.0",
 		"glob": "^11.0.0",
 		"inquirer": "^6.4.1",
-		"jasmine": "3.5.0",
+		"jasmine": "^5.3.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"lerna": "^3.16.4",
 		"lerna-changelog": "^0.8.2",
