refactor(cli): bump outdated dependencies; update cli commands to use the new yargs API; introduce strict types for all cli commands
* chore(*): update fs-extra & types to latest

* chore(*): update browser-sync & lite-server to latest

* chore(cli): bump types/node, nyc, fs-extra, types/fs-extra, browser-sync, lite-server

* chore(root; cli): update typescript-json-schema, remove deprecated opn in favor of open

* chore(root; cli): update through2, source-map-support

* chore(cli): bump ts-node

* chore(root; cli): bump chalk, coveralls

* chore(root;cli): bump glob, resolve, rxjs, handlebars

* chore(cli): bump yargs

* refactor(cli): update quickstart command; introduce strict types

* refactor(cli): update new command; introduce strict types

* refactor(cli): rework command chaining; update add command; introduce strict typing

* refactor(cli): update build command; introduce strict types

* refactor(cli): update start command; introduce strict types

* refactor(cli): update generate command; introduce strict types

* refactor(cli): update config command; introduce strict types

* refactor(cli_: update doc command; introduce strict types

* refactor(cli): update test command; introduce strict types

* refactor(cli): update list command; introduce strict types

* refactor(cli): update upgrade command; introduce strict types

* refactor(cli): setup help command

* refactor(execute): provide args to cli.run

* refactor(cli): disable usage msg on all commands

* refactor(cli): check for help on quickstart; use correct upgrade command name

* test(help): introduce tests for all commands

* refactor(cli): export commands from an index

* docs(cli): add docs for new types

* refactor(workflows): remove 18.x for node ci

* refactor(workflows): generate coverage for 20.x

* refactor(*): use report-dir for nyc report

* refactor(root; cli): remove fs-extra

* refactor(cli): run prompt session when no command ma

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v3 #set credentials for every repository on the computer --global, so `New command` CLI tests pass
@@ -31,10 +31,10 @@ jobs:
           yarn config set scripts-prepend-node-path auto
           yarn test
       - name: Generate coverage
-        if: matrix.node-version == '18.x'
+        if: matrix.node-version == '20.x'
         run: yarn coverage
       - name: Publish to coveralls.io
-        if: matrix.node-version == '18.x'
+        if: matrix.node-version == '20.x'
         uses: coverallsapp/github-action@v1.1.2
         with:
             github-token: ${{ github.token }}
