--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -80,35 +80,34 @@
   "dependencies": {
     "@igniteui/angular-templates": "~18.1.1401",
     "@igniteui/cli-core": "~14.0.1",
-    "chalk": "^2.3.2",
-    "fs-extra": "^3.0.1",
-    "glob": "^7.1.2",
+    "@types/yargs": "^17.0.33",
+    "chalk": "^5.3.0",
+    "glob": "^11.0.0",
     "inquirer": "^6.4.1",
-    "opn": "^5.3.0",
-    "resolve": "^1.6.0",
-    "through2": "^2.0.3",
+    "open": "^10.1.0",
+    "resolve": "^1.22.8",
+    "through2": "^4.0.2",
     "typescript": "~5.4.3",
-    "yargs": "^8.0.2"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@angular-devkit/core": "~14.0.0",
     "@angular-devkit/schematics": "~14.0.0",
     "@schematics/angular": "~14.0.0",
-    "@types/fs-extra": "^3.0.3",
     "@types/inquirer": "0.0.35",
     "@types/jasmine": "~3.5.0",
-    "@types/node": "^12.11.1",
-    "browser-sync": "^2.26.3",
-    "coveralls": "^3.0.0",
+    "@types/node": "^20.12.3",
+    "browser-sync": "^3.0.2",
+    "coveralls": "^3.1.1",
     "jasmine": "3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "lite-server": "^2.4.0",
-    "nyc": "^13.1.0",
-    "rxjs": "^6.6.3",
-    "source-map-support": "^0.5.4",
-    "ts-node": "~8.3.0",
+    "lite-server": "^2.6.1",
+    "nyc": "^17.0.0",
+    "rxjs": "^7.8.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.0",
-    "typescript-json-schema": "^0.42.0"
+    "typescript-json-schema": "^0.65.1"
   },
   "ng-update": {
     "migrations": "./migrations/migration-collection.json"
