--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"pretest": "npm run lint && npm run build",
 		"test": "nyc npm run jasmine",
 		"jasmine": "node spec/jasmine-runner.js",
-		"coverage": "nyc report --dir coverage lcov",
+		"coverage": "nyc report --report-dir",
 		"lint": "eslint -c .eslintrc.json ./**/*.ts",
 		"config-schema": "typescript-json-schema packages/core/types/Config.ts Config -o packages/core/config/Config.schema.json"
 	},
@@ -57,37 +57,35 @@
 		"all": true
 	},
 	"dependencies": {
-		"handlebars": "4.7.7"
+		"handlebars": "4.7.8"
 	},
 	"devDependencies": {
-		"@types/fs-extra": "^3.0.3",
 		"@types/inquirer": "0.0.35",
 		"@types/jasmine": "3.3.9",
 		"@types/minimatch": "^5.1.2",
 		"@types/node": "^20.12.3",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
-		"browser-sync": "^2.26.3",
-		"coveralls": "^3.0.0",
+		"browser-sync": "^3.0.2",
+		"coveralls": "^3.1.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-unicorn": "^52.0.0",
-		"fs-extra": "^3.0.1",
-		"glob": "^7.1.2",
+		"glob": "^11.0.0",
 		"inquirer": "^6.4.1",
 		"jasmine": "3.5.0",
 		"jasmine-spec-reporter": "^4.2.1",
 		"lerna": "^3.16.4",
 		"lerna-changelog": "^0.8.2",
-		"lite-server": "^2.4.0",
-		"nyc": "^13.1.0",
-		"resolve": "^1.6.0",
-		"source-map-support": "^0.5.4",
+		"lite-server": "^2.6.1",
+		"nyc": "^17.0.0",
+		"resolve": "^1.22.8",
+		"source-map-support": "^0.5.21",
 		"ts-node": "^10.9.2",
 		"tslint": "^5.11.0",
 		"typescript": "~5.4.3",
-		"typescript-json-schema": "^0.63.0"
+		"typescript-json-schema": "^0.65.1"
 	},
 	"workspaces": [
 		"packages/*"
