upgrade cli jasmine packages

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -80,10 +80,13 @@
   "dependencies": {
     "@igniteui/angular-templates": "~18.1.1401",
     "@igniteui/cli-core": "~14.0.1",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
     "glob": "^11.0.0",
     "inquirer": "^6.4.1",
+    "jasmine": "^5.3.0",
     "open": "^10.1.0",
     "resolve": "^1.22.8",
     "through2": "^4.0.2",
@@ -95,11 +98,11 @@
     "@angular-devkit/schematics": "~14.0.0",
     "@schematics/angular": "~14.0.0",
     "@types/inquirer": "0.0.35",
-    "@types/jasmine": "~3.5.0",
-    "@types/node": "^20.12.3",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
     "browser-sync": "^3.0.2",
     "coveralls": "^3.1.1",
-    "jasmine": "3.5.0",
+    "jasmine": "^5.3.0",
     "jasmine-spec-reporter": "~5.0.0",
     "lite-server": "^2.6.1",
     "nyc": "^17.0.0",
