--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -26,9 +26,9 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
-    "@types/jasmine": "3.3.9",
-    "@types/node": "^8.0.31",
-    "jasmine": "3.5.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
+    "jasmine": "^5.3.0",
     "typescript": "~5.4.3"
   },
   "ng-update": {
