--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -18,12 +18,12 @@
   "license": "MIT",
   "schematics": "./src/collection.json",
   "dependencies": {
-    "@angular-devkit/core": "~14.0.0",
-    "@angular-devkit/schematics": "~14.0.0",
+    "@angular-devkit/core": "^18.2.4",
+    "@angular-devkit/schematics": "^18.2.4",
     "@igniteui/angular-templates": "~18.1.1401",
     "@igniteui/cli-core": "~14.0.1",
     "@schematics/angular": "~14.0.0",
-    "rxjs": "^6.6.3"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@types/jasmine": "^5.1.4",
