--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -99,7 +99,7 @@
     "browser-sync": "^3.0.2",
     "coveralls": "^3.1.1",
     "jasmine": "^5.3.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "lite-server": "^2.6.1",
     "nyc": "^17.0.0",
     "rxjs": "^7.8.1",
