--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/tsconfig.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/tsconfig.json
@@ -11,7 +11,7 @@
     ],
     "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "importHelpers": true,
