refactor(cli): fix release by adding allowSyntheticDefaultImports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
 				"./packages/cli"
 			]
 		},
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true
 	},
 	"exclude": [
 		"output",
