refactor(cli): fix release by adding esModuleInterop in tsconfig-pack.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,7 @@
 				"./packages/cli"
 			]
 		},
-		"esModuleInterop": true,
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true
+		"esModuleInterop": true
 	},
 	"exclude": [
 		"output",
