--- a/tsconfig-pack.json
+++ b/tsconfig-pack.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
-		"declaration": true
+		"declaration": true,
+		"esModuleInterop": true
 	},
 	"exclude": [
 		"./spec",
