--- a/tsconfig-pack.json
+++ b/tsconfig-pack.json
@@ -1,14 +1,31 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
 		"target": "es6",
 		"module": "commonjs",
 		"declaration": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"sourceMap": true,
+		"paths": {
+			"@igniteui/cli-core": [
+				"./packages/core"
+			],
+			"@igniteui/angular-templates": [
+				"./packages/igx-templates"
+			],
+			"@igniteui/angular-schematics": [
+				"./packages/ng-schematics"
+			],
+			"igniteui-cli": [
+				"./packages/cli"
+			]
+		},
 	},
 	"exclude": [
 		"./spec",
 		"./output",
 		"**/files/*",
+		"packages/cli/**/files/*",
 		"packages/cli/templates/quickstart/angular",
 		"node_modules"
 	]
