--- a/packages/igx-templates/igx-ts/projects/_base/files/tsconfig.spec.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/tsconfig.spec.json
@@ -5,7 +5,8 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "esModuleInterop": true,
   },
   "include": [
     "src/**/*.spec.ts",
