refactor(cli): upgrade typescript to 5.5.4

--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@vaadin/router": "^1.7.4",
     "lit": "^3.1.2",
-    "typescript": "^5.3.3",
+    "typescript": "~5.5.4",
     "igniteui-webcomponents": "~4.11.0"
   },
   "devDependencies": {
