--- a/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
-    "typescript": "^5.0.2",
+    "typescript": "~5.5.4",
     "vite": "^4.4.9",
     "vitest-canvas-mock": "^0.3.3",
     "igniteui-cli": "~$(cliVersion)"
