--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
@@ -31,7 +31,7 @@
     "igniteui-webcomponents-inputs": "~4.8.0",
     "igniteui-webcomponents-layouts": "~4.8.0",
     "lit": "^3.1.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.5.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
