--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
 		"handlebars": "4.7.8"
 	},
 	"devDependencies": {
-		"@types/jasmine": "3.3.9",
-		"@types/minimatch": "^5.1.2",
-		"@types/node": "^20.12.3",
 		"@inquirer/prompts": "^5.4.0",
+		"@types/jasmine": "^5.1.4",
+		"@types/minimatch": "^5.1.2",
+		"@types/node": "^22.5.5",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"@typescript-eslint/parser": "^7.5.0",
 		"browser-sync": "^3.0.2",
@@ -73,8 +73,8 @@
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-unicorn": "^52.0.0",
 		"glob": "^11.0.0",
-		"jasmine": "3.5.0",
-		"jasmine-spec-reporter": "^4.2.1",
+		"jasmine": "^5.3.0",
+		"jasmine-spec-reporter": "^7.0.0",
 		"lerna": "^3.16.4",
 		"lerna-changelog": "^0.8.2",
 		"lite-server": "^2.6.1",
@@ -83,7 +83,7 @@
 		"source-map-support": "^0.5.21",
 		"ts-node": "^10.9.2",
 		"tslint": "^5.11.0",
-		"typescript": "~5.4.3",
+		"typescript": "~5.5.4",
 		"typescript-json-schema": "^0.65.1"
 	},
 	"workspaces": [
