--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.0.2",
+  "version": "14.1.0-beta.1",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -78,28 +78,28 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~18.1.1402",
-    "@igniteui/cli-core": "~14.0.2",
+    "@igniteui/angular-templates": "~18.1.1410-beta.1",
+    "@igniteui/cli-core": "~14.1.0-beta.1",
+    "@inquirer/prompts": "^5.4.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
     "glob": "^11.0.0",
-    "@inquirer/prompts": "^5.4.0",
     "open": "^10.1.0",
     "resolve": "^1.22.8",
     "through2": "^4.0.2",
-    "typescript": "~5.4.3",
+    "typescript": "~5.5.4",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~14.0.0",
-    "@angular-devkit/schematics": "~14.0.0",
+    "@angular-devkit/core": "^18.2.4",
+    "@angular-devkit/schematics": "^18.2.4",
     "@schematics/angular": "~14.0.0",
-    "@types/jasmine": "~3.5.0",
-    "@types/node": "^20.12.3",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
     "browser-sync": "^3.0.2",
     "coveralls": "^3.1.1",
-    "jasmine": "3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine": "^5.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "lite-server": "^2.6.1",
     "nyc": "^17.0.0",
     "rxjs": "^7.8.1",
