--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "18.1.1402",
+  "version": "18.1.1410-beta.1",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -18,18 +18,18 @@
   "license": "MIT",
   "schematics": "./src/collection.json",
   "dependencies": {
-    "@angular-devkit/core": "~14.0.0",
-    "@angular-devkit/schematics": "~14.0.0",
-    "@igniteui/angular-templates": "~18.1.1402",
-    "@igniteui/cli-core": "~14.0.2",
+    "@angular-devkit/core": "^18.2.4",
+    "@angular-devkit/schematics": "^18.2.4",
+    "@igniteui/angular-templates": "~18.1.1410-beta.1",
+    "@igniteui/cli-core": "~14.1.0-beta.1",
     "@schematics/angular": "~14.0.0",
-    "rxjs": "^6.6.3"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@types/jasmine": "3.3.9",
-    "@types/node": "^8.0.31",
-    "jasmine": "3.5.0",
-    "typescript": "~5.4.3"
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
+    "jasmine": "^5.3.0",
+    "typescript": "~5.5.4"
   },
   "ng-update": {
     "migrations": "./src/migrations/migration-collection.json"
