--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.1.0",
+  "version": "14.1.1-beta.1",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -78,9 +78,9 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~18.1.1410",
-    "@igniteui/cli-core": "~14.1.0",
-    "@inquirer/prompts": "^5.4.0",
+    "@igniteui/angular-templates": "~18.1.1411-beta.1",
+    "@igniteui/cli-core": "~14.1.1-beta.1",
+    "@inquirer/prompts": "~5.4.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
     "glob": "^11.0.0",
