--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/cli-core",
-  "version": "14.1.0",
+  "version": "14.1.1-beta.1",
   "description": "Base types and functionality for Ignite UI CLI",
   "repository": {
     "type": "git",
@@ -12,11 +12,11 @@
   "author": "Infragistics",
   "license": "MIT",
   "dependencies": {
-    "@inquirer/prompts": "^5.4.0",
+    "@inquirer/prompts": "~5.4.0",
     "chalk": "^2.3.2",
     "glob": "^7.1.2",
-    "through2": "^4.0.2",
-    "typescript": "~5.5.4"
+    "through2": "^2.0.3",
+    "typescript": "~5.4.3"
   },
   "devDependencies": {
     "@angular-devkit/schematics": "^18.2.4",
