--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
     "hammerjs": "^2.0.8",
-    "igniteui-angular": "~18.2.0-beta.2",
+    "igniteui-angular": "~18.2.0-rc.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.0",
     "tslib": "~2.3.0",
