--- a/packages/igx-templates/igx-ts-legacy/projects/_base_with_home/files/__dot__github/workflows/github.io.yml
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base_with_home/files/__dot__github/workflows/github.io.yml
@@ -25,8 +25,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        # cache: 'npm' # enable after committing lock file from first install
-    - run: npm i # replace with 'npm ci' after committing lock file from first install
+        cache: 'npm'
+    - run: npm ci
     - name: Set project name
       run: echo "PROJECT_NAME=$(jq -r '.name' package.json)" >> $GITHUB_ENV
     - name: Determine if project is standalone and set build path
