--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/node.js.yml
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
+        # cache: 'npm' # enable after committing lock file from first install
+    - run: npm i # replace with 'npm ci' after committing lock file from first install
     - run: npm run lint
     - run: npm run build
     - run: npm run test -- --watch=false --browsers ChromeHeadless
