--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.1.0",
+  "version": "14.2.0-beta.3",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -78,8 +78,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~18.1.1410",
-    "@igniteui/cli-core": "~14.1.0",
+    "@igniteui/angular-templates": "~18.2.1420-beta.3",
+    "@igniteui/cli-core": "~14.2.0-beta.3",
     "@inquirer/prompts": "^5.4.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
