--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github.io.yml
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github.io.yml
@@ -2,9 +2,9 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ <%=yamlDefaultBranch%> ]
+    branches: [ $(yamlDefaultBranch) ]
   pull_request:
-    branches: [ <%=yamlDefaultBranch%> ]
+    branches: [ $(yamlDefaultBranch) ]
 
 jobs:
   build-and-deploy:
