--- a/packages/igx-templates/igx-ts-legacy/projects/side-nav-auth/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/side-nav-auth/files/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~18.2.0",
     "angular-auth-oidc-client": "~15.0.4",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~18.2.0-rc.0",
+    "igniteui-angular": "~18.2.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.0",
     "tslib": "~2.3.0",
