chore: use "skipLibCheck": true

--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/tsconfig.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "strict": true,
     "sourceMap": true,
     "declaration": false,
