--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/github.io.yml
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/github.io.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build-and-deploy:
-
+    # Deactivate the workflow. Will be changed when AB is ready
+    if: false
     runs-on: ubuntu-latest
 
     permissions:
