fix(cli): upgrade versions of karma, webpack-dev-server, parse-url and braces

--- a/packages/cli/templates/quickstart/react/package.json
+++ b/packages/cli/templates/quickstart/react/package.json
@@ -37,6 +37,6 @@
     "html-webpack-plugin": "2.26.0",
     "style-loader": "0.13.1",
     "webpack": "5.94.0",
-    "webpack-dev-server": "2.2.0"
+    "webpack-dev-server": "^5.1.0"
   }
 }
