--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
 		"glob": "^11.0.0",
 		"jasmine": "^5.3.0",
 		"jasmine-spec-reporter": "^7.0.0",
-		"lerna": "^3.16.4",
+		"lerna": "^8.1.9",
 		"lerna-changelog": "^0.8.2",
 		"lite-server": "^2.6.1",
 		"nyc": "^17.0.0",
@@ -85,6 +85,10 @@
 		"tslint": "^5.11.0",
 		"typescript": "~5.5.4",
 		"typescript-json-schema": "^0.65.1"
+	},
+	"resolutions": {
+		"parse-url": "^8.1.0",
+		"braces": "^3.0.3"
 	},
 	"workspaces": [
 		"packages/*"
