--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github.io.yml
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/__dot__github/workflows/github.io.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build-and-deploy:
-
+    # Deactivate the workflow. Will be changed when AB is ready
+    if: false
     runs-on: ubuntu-latest
 
     permissions:
@@ -17,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [22.x]
 
     steps:
     - uses: actions/checkout@v3
