--- a/packages/igx-templates/igx-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/igx-templates/igx-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -2,9 +2,9 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ <%=yamlDefaultBranch%> ]
+    branches: [ '*' ]
   pull_request:
-    branches: [ <%=yamlDefaultBranch%> ]
+    branches: [ '*' ]
 
 jobs:
   build-and-deploy:
