fix(cli): add environment and restore push only to default branch

--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -2,9 +2,9 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ '*' ]
+    branches: [ <%=yamlDefaultBranch%> ]
   pull_request:
-    branches: [ '*' ]
+    branches: [ <%=yamlDefaultBranch%> ]
 
 jobs:
   build-and-deploy:
@@ -14,6 +14,10 @@ jobs:
     permissions:
       pages: write
       id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     strategy:
       matrix:
