--- a/packages/igx-templates/igx-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/igx-templates/igx-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -8,13 +8,16 @@ on:
 
 jobs:
   build-and-deploy:
-    # Deactivate the workflow. Will be changed when AB is ready
-    if: false
+    if: <%=yamlGenerateDeploymentScript%> == true
     runs-on: ubuntu-latest
 
     permissions:
       pages: write
       id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     strategy:
       matrix:
