chore(schematics, cli): Updating to 19.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
 				"./packages/cli"
 			]
 		},
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"skipLibCheck": true,
 	},
 	"exclude": [
 		"output",
