chore(templates): Bumping igniteui-angular and angular-eslint packages.

--- a/packages/igx-templates/igx-ts/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~19.0.0-beta.0",
+    "igniteui-angular": "~19.0.0-rc.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.0",
     "tslib": "~2.3.0",
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-eslint/builder": "~19.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "~19.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "~19.0.0-alpha.0",
-    "@angular-eslint/schematics": "~19.0.0-alpha.0",
-    "@angular-eslint/template-parser": "~19.0.0-alpha.0",
+    "@angular-eslint/builder": "~19.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "~19.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "~19.0.0-alpha.1",
+    "@angular-eslint/schematics": "~19.0.0-alpha.1",
+    "@angular-eslint/template-parser": "~19.0.0-alpha.1",
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@types/jasmine": "~5.1.1",
