--- a/packages/igx-templates/igx-ts/projects/side-nav-auth/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/side-nav-auth/files/package.json
@@ -28,15 +28,15 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-eslint/builder": "~18.2.0",
-    "@angular-eslint/eslint-plugin": "~18.2.0",
-    "@angular-eslint/eslint-plugin-template": "~18.2.0",
-    "@angular-eslint/schematics": "~18.2.0",
-    "@angular-eslint/template-parser": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
+    "@angular-devkit/build-angular": "~19.0.0",
+    "@angular-eslint/builder": "~19.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "~19.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "~19.0.0-alpha.1",
+    "@angular-eslint/schematics": "~19.0.0-alpha.1",
+    "@angular-eslint/template-parser": "~19.0.0-alpha.1",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "~19.0.0",
+    "@angular/language-service": "~19.0.0",
     "@types/facebook-js-sdk": "~3.3.6",
     "@types/hammerjs": "~2.0.41",
     "@types/jasmine": "~5.1.1",
