--- a/packages/igx-templates/package.json
+++ b/packages/igx-templates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-templates",
-  "version": "18.2.1424-beta.0",
+  "version": "19.0.1430-rc.0",
   "description": "Templates for Ignite UI for Angular projects and components",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   "author": "Infragistics",
   "license": "MIT",
   "dependencies": {
-    "@igniteui/cli-core": "~14.2.4-beta.0",
+    "@igniteui/cli-core": "~14.3.0-rc.0",
     "typescript": "~5.5.4"
   }
 }
