--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "18.2.1424-beta.0",
+  "version": "19.0.1430-rc.0",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   "dependencies": {
     "@angular-devkit/core": "^19.0.0",
     "@angular-devkit/schematics": "^19.0.0",
-    "@igniteui/angular-templates": "~18.2.1424-beta.0",
-    "@igniteui/cli-core": "~14.2.4-beta.0",
+    "@igniteui/angular-templates": "~19.0.1430-rc.0",
+    "@igniteui/cli-core": "~14.3.0-rc.0",
     "@schematics/angular": "~19.0.0",
     "rxjs": "^7.8.1"
   },
