remove deployment script flag and if condition in github pages workflow (#1351)

--- a/packages/cli/templates/react/igr-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/__dot__github/workflows/github-pages.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    if: $(yamlGenerateDeploymentScript) == true
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -38,7 +38,7 @@ jobs:
     - name: Copy Resources to dist
       run: mkdir -p ./dist/assets && cp -R ./src/assets/* ./dist/assets/
     - name: SPA routing handling
-      run: cp .dist/index.html .dist/404.html
+      run: cp ./dist/index.html ./dist/404.html
     - name: Upload build artifact to GitHub Pages
       uses: actions/upload-pages-artifact@v1
       with:
