fix(cli): add missing configs for angular eslint

--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/angular.json
@@ -116,6 +116,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
+            "eslintConfig": "eslint.config.mjs",
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
