--- a/packages/igx-templates/igx-ts/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/angular.json
@@ -110,6 +110,7 @@
 				"lint": {
 				  "builder": "@angular-eslint/builder:lint",
 				  "options": {
+          "eslintConfig": "eslint.config.mjs",
 					"lintFilePatterns": [
 					  "src/**/*.ts",
 					  "src/**/*.html"
