fix(cli): update lint command in package json files

--- a/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
@@ -34,7 +34,7 @@
     "start": "vite",
     "build": "tsc && node --max-old-space-size=4096 node_modules/vite/bin/vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "test": "vitest"
   },
   "browserslist": [
